--- a/STM32C031C6_FFT_TRAFFIC_LIGHT.ioc
+++ b/STM32C031C6_FFT_TRAFFIC_LIGHT.ioc
@@ -18,18 +18,21 @@ Mcu.Name=STM32C031C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSCX_IN (PC14)
-Mcu.Pin10=PB8
-Mcu.Pin11=PB9
-Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin10=PD2
+Mcu.Pin11=PB6
+Mcu.Pin12=PB7
+Mcu.Pin13=PB8
+Mcu.Pin14=PB9
+Mcu.Pin15=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSCX_OUT (PC15)
 Mcu.Pin3=PF0-OSC_IN (PF0)
 Mcu.Pin4=PF1-OSC_OUT (PF1)
 Mcu.Pin5=PA5
 Mcu.Pin6=PA13
 Mcu.Pin7=PA14-BOOT0
-Mcu.Pin8=PB6
-Mcu.Pin9=PB7
-Mcu.PinsNb=13
+Mcu.Pin8=PD0
+Mcu.Pin9=PD1
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32C031C6Tx
@@ -76,6 +79,18 @@ PC14-OSCX_IN\ (PC14).Signal=RCC_OSCX_IN
 PC15-OSCX_OUT\ (PC15).Locked=true
 PC15-OSCX_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSCX_OUT\ (PC15).Signal=RCC_OSCX_OUT
+PD0.GPIOParameters=GPIO_Label
+PD0.GPIO_Label=LED_RED
+PD0.Locked=true
+PD0.Signal=GPIO_Output
+PD1.GPIOParameters=GPIO_Label
+PD1.GPIO_Label=LED_YELLOW
+PD1.Locked=true
+PD1.Signal=GPIO_Output
+PD2.GPIOParameters=GPIO_Label
+PD2.GPIO_Label=LED_GREEN
+PD2.Locked=true
+PD2.Signal=GPIO_Output
 PF0-OSC_IN\ (PF0).Locked=true
 PF0-OSC_IN\ (PF0).Mode=HSE-External-Oscillator
 PF0-OSC_IN\ (PF0).Signal=RCC_OSC_IN
