--- a/STM32C031C6_FFT_TRAFFIC_LIGHT.ioc
+++ b/STM32C031C6_FFT_TRAFFIC_LIGHT.ioc
@@ -20,12 +20,12 @@ Mcu.Pin11=PB7
 Mcu.Pin12=VP_SYS_VS_Systick
 Mcu.Pin2=PF0-OSC_IN (PF0)
 Mcu.Pin3=PF1-OSC_OUT (PF1)
-Mcu.Pin4=PA5
-Mcu.Pin5=PA13
-Mcu.Pin6=PA14-BOOT0
-Mcu.Pin7=PD0
-Mcu.Pin8=PD1
-Mcu.Pin9=PD2
+Mcu.Pin4=PA0
+Mcu.Pin5=PA1
+Mcu.Pin6=PA4
+Mcu.Pin7=PA5
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14-BOOT0
 Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -38,12 +38,24 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=LED_RED
+PA0.Locked=true
+PA0.Signal=GPIO_Output
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=LED_YELLOW
+PA1.Locked=true
+PA1.Signal=GPIO_Output
 PA13.Locked=true
 PA13.Mode=Serial_Wire
 PA13.Signal=DEBUG_SWDIO
 PA14-BOOT0.Locked=true
 PA14-BOOT0.Mode=Serial_Wire
 PA14-BOOT0.Signal=DEBUG_SWCLK
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=LED_GREEN
+PA4.Locked=true
+PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PA5.GPIO_Label=Led
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -62,18 +74,6 @@ PC14-OSCX_IN\ (PC14).Signal=RCC_OSCX_IN
 PC15-OSCX_OUT\ (PC15).Locked=true
 PC15-OSCX_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSCX_OUT\ (PC15).Signal=RCC_OSCX_OUT
-PD0.GPIOParameters=GPIO_Label
-PD0.GPIO_Label=LED_RED
-PD0.Locked=true
-PD0.Signal=GPIO_Output
-PD1.GPIOParameters=GPIO_Label
-PD1.GPIO_Label=LED_YELLOW
-PD1.Locked=true
-PD1.Signal=GPIO_Output
-PD2.GPIOParameters=GPIO_Label
-PD2.GPIO_Label=LED_GREEN
-PD2.Locked=true
-PD2.Signal=GPIO_Output
 PF0-OSC_IN\ (PF0).Locked=true
 PF0-OSC_IN\ (PF0).Mode=HSE-External-Oscillator
 PF0-OSC_IN\ (PF0).Signal=RCC_OSC_IN
@@ -108,7 +108,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,0-MX_CORTEX_M0+_Init-CORTEX_M0+-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,0-MX_CORTEX_M0+_Init-CORTEX_M0+-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=48000000
 RCC.APBFreq_Value=48000000
