--- a/STM32C031C6_FFT_TRAFFIC_LIGHT.ioc
+++ b/STM32C031C6_FFT_TRAFFIC_LIGHT.ioc
@@ -9,24 +9,25 @@ Mcu.IP1=DEBUG
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
-Mcu.IP5=USART1
+Mcu.IP5=USART2
 Mcu.IPNb=6
 Mcu.Name=STM32C031C(4-6)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PC14-OSCX_IN (PC14)
-Mcu.Pin1=PC15-OSCX_OUT (PC15)
-Mcu.Pin10=PB6
-Mcu.Pin11=PB7
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin2=PF0-OSC_IN (PF0)
-Mcu.Pin3=PF1-OSC_OUT (PF1)
-Mcu.Pin4=PA0
-Mcu.Pin5=PA1
-Mcu.Pin6=PA4
-Mcu.Pin7=PA5
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14-BOOT0
-Mcu.PinsNb=13
+Mcu.Pin0=PC13
+Mcu.Pin1=PC14-OSCX_IN (PC14)
+Mcu.Pin10=PA5
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14-BOOT0
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin2=PC15-OSCX_OUT (PC15)
+Mcu.Pin3=PF0-OSC_IN (PF0)
+Mcu.Pin4=PF1-OSC_OUT (PF1)
+Mcu.Pin5=PA0
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA4
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32C031C6Tx
@@ -52,6 +53,10 @@ PA13.Signal=DEBUG_SWDIO
 PA14-BOOT0.Locked=true
 PA14-BOOT0.Mode=Serial_Wire
 PA14-BOOT0.Signal=DEBUG_SWCLK
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=LED_GREEN
 PA4.Locked=true
@@ -62,12 +67,11 @@ PA5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA5.Locked=true
 PA5.PinState=GPIO_PIN_SET
 PA5.Signal=GPIO_Output
-PB6.Locked=true
-PB6.Mode=Asynchronous
-PB6.Signal=USART1_TX
-PB7.Locked=true
-PB7.Mode=Asynchronous
-PB7.Signal=USART1_RX
+PC13.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC13.GPIO_Label=BUTTON
+PC13.GPIO_PuPd=GPIO_PULLUP
+PC13.Locked=true
+PC13.Signal=GPIO_Input
 PC14-OSCX_IN\ (PC14).Locked=true
 PC14-OSCX_IN\ (PC14).Mode=LSE-External-Oscillator
 PC14-OSCX_IN\ (PC14).Signal=RCC_OSCX_IN
@@ -108,7 +112,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,0-MX_CORTEX_M0+_Init-CORTEX_M0+-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,0-MX_CORTEX_M0+_Init-CORTEX_M0+-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=48000000
 RCC.APBFreq_Value=48000000
@@ -131,8 +135,8 @@ RCC.MCO2PinFreq_Value=48000000
 RCC.PWRFreq_Value=48000000
 RCC.SYSCLKFreq_VALUE=48000000
 RCC.USART1Freq_Value=48000000
-USART1.IPParameters=VirtualMode-Asynchronous
-USART1.VirtualMode-Asynchronous=VM_ASYNC
+USART2.IPParameters=VirtualMode-Asynchronous
+USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-C031C6
