--- a/STM32C031C6_FFT_TRAFFIC_LIGHT.ioc
+++ b/STM32C031C6_FFT_TRAFFIC_LIGHT.ioc
@@ -18,7 +18,10 @@ Mcu.Pin1=PC14-OSCX_IN (PC14)
 Mcu.Pin10=PA5
 Mcu.Pin11=PA13
 Mcu.Pin12=PA14-BOOT0
-Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin13=PB3
+Mcu.Pin14=PB4
+Mcu.Pin15=PB5
+Mcu.Pin16=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSCX_OUT (PC15)
 Mcu.Pin3=PF0-OSC_IN (PF0)
 Mcu.Pin4=PF1-OSC_OUT (PF1)
@@ -27,12 +30,13 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=14
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32C031C6Tx
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
+NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -40,11 +44,11 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
 PA0.GPIOParameters=GPIO_Label
-PA0.GPIO_Label=LED_RED
+PA0.GPIO_Label=LED_RED_1
 PA0.Locked=true
 PA0.Signal=GPIO_Output
 PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=LED_YELLOW
+PA1.GPIO_Label=LED_YELLOW_1
 PA1.Locked=true
 PA1.Signal=GPIO_Output
 PA13.Locked=true
@@ -58,7 +62,7 @@ PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=LED_GREEN
+PA4.GPIO_Label=LED_GREEN_1
 PA4.Locked=true
 PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
@@ -67,11 +71,23 @@ PA5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA5.Locked=true
 PA5.PinState=GPIO_PIN_SET
 PA5.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=LED_RED_2
+PB3.Locked=true
+PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=LED_YELLOW_2
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=LED_GREEN_2
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC13.GPIO_Label=BUTTON
 PC13.GPIO_PuPd=GPIO_PULLUP
 PC13.Locked=true
-PC13.Signal=GPIO_Input
+PC13.Signal=GPXTI13
 PC14-OSCX_IN\ (PC14).Locked=true
 PC14-OSCX_IN\ (PC14).Mode=LSE-External-Oscillator
 PC14-OSCX_IN\ (PC14).Signal=RCC_OSCX_IN
@@ -135,6 +151,8 @@ RCC.MCO2PinFreq_Value=48000000
 RCC.PWRFreq_Value=48000000
 RCC.SYSCLKFreq_VALUE=48000000
 RCC.USART1Freq_Value=48000000
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
