--- a/STM32C031C6_FFT_TRAFFIC_LIGHT.ioc
+++ b/STM32C031C6_FFT_TRAFFIC_LIGHT.ioc
@@ -83,8 +83,9 @@ PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=LED_GREEN_2
 PB5.Locked=true
 PB5.Signal=GPIO_Output
-PC13.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=BUTTON
+PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC13.GPIO_PuPd=GPIO_PULLUP
 PC13.Locked=true
 PC13.Signal=GPXTI13
