Naive rtos thread implementation

--- a/STM32C031C6_FFT_TRAFFIC_LIGHT.ioc
+++ b/STM32C031C6_FFT_TRAFFIC_LIGHT.ioc
@@ -163,8 +163,11 @@ RCC.SYSCLKFreq_VALUE=48000000
 RCC.USART1Freq_Value=48000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-THREADX.IPParameters=TX_LOW_POWER
+THREADX.IPParameters=TX_LOW_POWER,TX_MINIMUM_STACK,TX_TIMER_THREAD_STACK_SIZE,TX_APP_MEM_POOL_SIZE
+THREADX.TX_APP_MEM_POOL_SIZE=2048
 THREADX.TX_LOW_POWER=1
+THREADX.TX_MINIMUM_STACK=512
+THREADX.TX_TIMER_THREAD_STACK_SIZE=1024
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_tim14.Mode=TIM14
