Button functionality the RTOS way with event flags

--- a/STM32C031C6_FFT_TRAFFIC_LIGHT.ioc
+++ b/STM32C031C6_FFT_TRAFFIC_LIGHT.ioc
@@ -52,9 +52,10 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:true\:false
 NVIC.TIM14_IRQn=true\:3\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM14_IRQn
 NVIC.TimeBaseIP=TIM14
-PA0.GPIOParameters=GPIO_Label
+PA0.GPIOParameters=PinState,GPIO_Label
 PA0.GPIO_Label=LED_RED_1
 PA0.Locked=true
+PA0.PinState=GPIO_PIN_SET
 PA0.Signal=GPIO_Output
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=LED_YELLOW_1
@@ -80,9 +81,10 @@ PA5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA5.Locked=true
 PA5.PinState=GPIO_PIN_SET
 PA5.Signal=GPIO_Output
-PB3.GPIOParameters=GPIO_Label
+PB3.GPIOParameters=PinState,GPIO_Label
 PB3.GPIO_Label=LED_RED_2
 PB3.Locked=true
+PB3.PinState=GPIO_PIN_SET
 PB3.Signal=GPIO_Output
 PB4.GPIOParameters=GPIO_Label
 PB4.GPIO_Label=LED_YELLOW_2
